# ratbite

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
dependencies/lib/: nfd.lib
dependencies/src/glad/include/glad/: glad.h
dependencies/src/glad/src/: glad.cpp
src/core/: callbacks.cpp  callbacks.h  camera.h  color.h  command.h  debug_macros.h  launch_parameters.h  light.h  light_tree.cpp  light_tree.h  light_tree_types.h  material.h  math_util.h  render_context.h  rendering_interface.cpp  rendering_interface.h  scene.cpp  scene.h  spectral.cpp  spectral.h  spectral_settings.h  sw_rast.h  texture.h  ui.cpp  ui.h  util.h  util_macros.h  window.h
src/device/: bxdf.h  color.h  dir_gen.h  filter.h  geometry.h  local_transform.h  microfacet.h  mis.h  quasi_random.h  sampling.h  spectral.h  surface.h  util.h
src/kernels/: cdf.cu  image.cu  image_resolve.cu  optix_programs_desc.h  pathtrace.cu
src/main/: main.cpp
